# abu_babu

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  badwords.txt  docker-compose.yml  pyproject.toml
bot/: main.py
bot/antispam/: __init__.py  config.py  extract.py  patterns.py  scorer.py  types.py
bot/background/: __init__.py  verification_timeout.py
bot/config/: settings.py
bot/db/: __init__.py  session.py
bot/filters/: __init__.py
bot/handlers/: __init__.py
bot/middlewares/: __init__.py  db.py  redis.py
bot/models/: __init__.py  enums.py  tables.py
bot/redis/: __init__.py  client.py
bot/repository/: __init__.py  audit.py  chat_settings.py  stats.py  users.py  whitelist.py
bot/routers/: __init__.py  admin.py  callbacks.py  events.py  user.py
bot/services/: __init__.py  badwords_store.py  flood_limiter.py  moderation.py  redis_keys.py  trust_store.py  verification_store.py
bot/utils/: crypto.py  logging.py  telegram.py  time.py
bot/ux/: __init__.py  keyboards.py
migrations/: env.py
migrations/versions/: 20260427_0001_init.py
tests/: test_crypto.py  test_scoring.py
